--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -895,6 +895,7 @@
   "single_seed_wallets_group": "กระเป๋าเงินเดียว",
   "slidable": "เลื่อนได้",
   "solana_create_associated_token_account_exception": "ข้อผิดพลาดในการสร้างบัญชีโทเค็นที่เกี่ยวข้องสำหรับที่อยู่รับ",
+  "solana_invalid_data_message": "เกิดข้อผิดพลาดในการแยกวิเคราะห์บัญชีโทเค็นที่เกี่ยวข้องสำหรับโทเค็น กรุณายืนยันที่อยู่ที่ได้รับแล้วลองอีกครั้ง",
   "solana_no_associated_token_account_exception": "ไม่มีบัญชีโทเค็นที่เกี่ยวข้องสำหรับที่อยู่นี้",
   "solana_sign_native_transaction_rent_exception": "การทำธุรกรรมไม่สามารถเสร็จสิ้นได้ SOL ไม่เพียงพอเหลือให้เช่าหลังการทำธุรกรรม กรุณาเติมยอดคงเหลือโซลของคุณหรือลดจำนวนโซลที่คุณกำลังส่ง",
   "solana_sign_spl_token_transaction_rent_exception": "การทำธุรกรรมไม่สามารถเสร็จสิ้นได้ SOL ไม่เพียงพอเหลือให้เช่าหลังการทำธุรกรรม กรุณาเติมยอดสมดุลโซลของคุณ",
