--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -895,6 +895,7 @@
   "single_seed_wallets_group": "Портфейли с единични семена",
   "slidable": "Плъзгащ се",
   "solana_create_associated_token_account_exception": "Грешка Създаване на свързана сметка за жетони за адреса на получател.",
+  "solana_invalid_data_message": "Грешка при синтактичния анализ на свързания токен акаунт за токен. Моля, потвърдете адреса за получаване и опитайте отново.",
   "solana_no_associated_token_account_exception": "Няма свързана сметка за този адрес.",
   "solana_sign_native_transaction_rent_exception": "Транзакцията не може да бъде завършена. Недостатъчен сол оставен под наем след транзакция. Любезно допълнете баланса си на SOL или намалете количеството SOL, което изпращате.",
   "solana_sign_spl_token_transaction_rent_exception": "Транзакцията не може да бъде завършена. Недостатъчен сол оставен под наем след транзакция. Любезно допълнете баланса си на SOL.",
