--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -895,6 +895,7 @@
   "single_seed_wallets_group": "Jednorázové peněženky",
   "slidable": "Posuvné",
   "solana_create_associated_token_account_exception": "Vytvoření chyby přidruženého účtu tokenů pro adresu příjmu.",
+  "solana_invalid_data_message": "Chyba při analýze přidruženého účtu tokenu pro token. Prosím potvrďte přijímací adresu a zkuste to znovu.",
   "solana_no_associated_token_account_exception": "Pro tuto adresu není přidružen žádný přidružený token.",
   "solana_sign_native_transaction_rent_exception": "Transakce nelze dokončit. Po transakci nedostatek Sol odešel k pronájmu. Laskavě doplňte rovnováhu SOL nebo snižte množství SOL, které odesíláte.",
   "solana_sign_spl_token_transaction_rent_exception": "Transakce nelze dokončit. Po transakci nedostatek Sol odešel k pronájmu. Laskavě doplňte rovnováhu SOL.",
