--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -896,6 +896,7 @@
   "single_seed_wallets_group": "Einzelne Wallets",
   "slidable": "Verschiebbar",
   "solana_create_associated_token_account_exception": "Fehler beim Erstellen des zugehörigen Token-Kontos für die Empfängeradresse.",
+  "solana_invalid_data_message": "Fehler beim Parsen des zugeordneten Token-Kontos für Token. Bitte bestätigen Sie die Empfangsadresse und versuchen Sie es erneut.",
   "solana_no_associated_token_account_exception": "Für diese Adresse ist kein Token-Konto zugeordnet.",
   "solana_sign_native_transaction_rent_exception": "Transaktion kann nicht abgeschlossen werden. Nach der Transaktion ist nicht genug Sol für die Miete übrig. Bitte stocken Sie Ihr SOL-Guthaben auf oder reduzieren Sie die Menge an SOL, die Sie senden.",
   "solana_sign_spl_token_transaction_rent_exception": "Transaktion kann nicht abgeschlossen werden. Nach der Transaktion ist nicht genug Sol für die Miete übrig. Bitte stocken Sie Ihr SOL-Guthaben auf",
