--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -896,6 +896,7 @@
   "single_seed_wallets_group": "Single Seed Wallets",
   "slidable": "Slidable",
   "solana_create_associated_token_account_exception": "Error creating associated token account for receipient address.",
+  "solana_invalid_data_message": "Error parsing associated token account for token. Kindly confirm receive address and try again.",
   "solana_no_associated_token_account_exception": "There is no associated token account for this address.",
   "solana_sign_native_transaction_rent_exception": "Transaction cannot be completed. Insufficient SOL left for rent after transaction. Kindly top up your SOL balance or reduce the amount of SOL you are sending.",
   "solana_sign_spl_token_transaction_rent_exception": "Transaction cannot be completed. Insufficient SOL left for rent after transaction. Kindly top up your SOL balance.",
