--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -611,8 +611,8 @@
   "payjoin_unavailable_sheet_title": "Payjoin अनुपलब्ध क्यों है?",
   "payment_id": "भुगतान ID: ",
   "payment_made_easy": "भुगतान आसान किया गया",
-  "Payment_was_received": "आपका भुगतान प्राप्त हो गया था।",
   "payment_was_received": "आपका भुगतान प्राप्त हुआ था।",
+  "Payment_was_received": "आपका भुगतान प्राप्त हो गया था।",
   "payments": "भुगतान",
   "pending": " (अपूर्ण)",
   "percentageOf": "${amount} का",
@@ -897,6 +897,7 @@
   "single_seed_wallets_group": "एकल बीज बटुए",
   "slidable": "फिसलने लायक",
   "solana_create_associated_token_account_exception": "रसीद पते के लिए संबद्ध टोकन खाता बनाने में त्रुटि।",
+  "solana_invalid_data_message": "टोकन के लिए संबद्ध टोकन खाते को पार्स करने में त्रुटि। कृपया प्राप्त पते की पुष्टि करें और पुनः प्रयास करें।",
   "solana_no_associated_token_account_exception": "इस पते के लिए कोई जुड़ा हुआ टोकन खाता नहीं है।",
   "solana_sign_native_transaction_rent_exception": "लेन -देन पूरा नहीं किया जा सकता है। अपर्याप्त सोल लेनदेन के बाद किराए के लिए छोड़ दिया। कृपया अपने सोल बैलेंस को टॉप करें या आपके द्वारा भेजे जा रहे सोल की मात्रा को कम करें।",
   "solana_sign_spl_token_transaction_rent_exception": "लेन -देन पूरा नहीं किया जा सकता है। अपर्याप्त सोल लेनदेन के बाद किराए के लिए छोड़ दिया। कृपया अपने सोल बैलेंस को ऊपर रखें।",
