--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -895,6 +895,7 @@
   "single_seed_wallets_group": "Jednostruki novčanici",
   "slidable": "Klizna",
   "solana_create_associated_token_account_exception": "Pogreška u stvaranju povezanog token računa za adresu primanja.",
+  "solana_invalid_data_message": "Pogreška pri raščlanjivanju povezanog računa tokena za token. Molimo potvrdite adresu primanja i pokušajte ponovo.",
   "solana_no_associated_token_account_exception": "Za ovu adresu ne postoji povezani token račun.",
   "solana_sign_native_transaction_rent_exception": "Transakcija se ne može završiti. Nedovoljno sol ostao je za najam nakon transakcije. Ljubazno nadopunite svoj SOL saldo ili smanjite količinu SOL -a koju šaljete.",
   "solana_sign_spl_token_transaction_rent_exception": "Transakcija se ne može završiti. Nedovoljno sol ostao je za najam nakon transakcije. Ljubazno nadopunite svoju sol ravnotežu.",
