--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -893,6 +893,7 @@
   "single_seed_wallets_group": "Մեկ սերմերի դրամապանակներ",
   "slidable": "Սահելի",
   "solana_create_associated_token_account_exception": "Recesient Advent- ի համար հարակից նշանների հաշիվ ստեղծելու սխալ:",
+  "solana_invalid_data_message": "Չհաջողվեց վերլուծել համապատասխան նշանային հաշիվը նշանի համար: Խնդրում ենք հաստատել ստացման հասցեն և նորից փորձել:",
   "solana_no_associated_token_account_exception": "Այս հասցեի համար կապված նշանների հաշիվ չկա:",
   "solana_sign_native_transaction_rent_exception": "Գործարքը հնարավոր չէ լրացնել: Անբավարար սոլը գործարքից հետո վարձով է մնացել: Սիրով վերացրեք ձեր SOL հավասարակշռությունը կամ նվազեցրեք ձեր ուղարկած սոլի քանակը:",
   "solana_sign_spl_token_transaction_rent_exception": "Գործարքը հնարավոր չէ լրացնել: Անբավարար սոլը գործարքից հետո վարձով է մնացել: Սիրով վերացրեք ձեր SOL հավասարակշռությունը:",
