--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -896,6 +896,7 @@
   "single_seed_wallets_group": "단일 시드 지갑",
   "slidable": "슬라이드 가능",
   "solana_create_associated_token_account_exception": "수신자 주소에 대한 연관 토큰 계정 생성 오류.",
+  "solana_invalid_data_message": "토큰에 연결된 토큰 계정을 구문 분석하는 중에 오류가 발생했습니다. 수신 주소를 확인하신 후 다시 시도해 주세요.",
   "solana_no_associated_token_account_exception": "이 주소에 대한 연관 토큰 계정이 없습니다.",
   "solana_sign_native_transaction_rent_exception": "트랜잭션을 완료할 수 없습니다. 트랜잭션 후 렌트에 필요한 SOL이 부족합니다. SOL 잔액을 충전하거나 보내는 SOL 금액을 줄이세요.",
   "solana_sign_spl_token_transaction_rent_exception": "트랜잭션을 완료할 수 없습니다. 트랜잭션 후 렌트에 필요한 SOL이 부족합니다. SOL 잔액을 충전하세요.",
