--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -895,6 +895,7 @@
   "single_seed_wallets_group": "Enkele zaadportefeuilles",
   "slidable": "Verschuifbaar",
   "solana_create_associated_token_account_exception": "Fout bij het maken van een geassocieerd tokenaccount voor ontvangingsadres.",
+  "solana_invalid_data_message": "Fout bij het parseren van gekoppeld tokenaccount voor token. Bevestig het ontvangstadres en probeer het opnieuw.",
   "solana_no_associated_token_account_exception": "Er is geen bijbehorende tokenaccount voor dit adres.",
   "solana_sign_native_transaction_rent_exception": "Transactie kan niet worden voltooid. Onvoldoende Sol vertrok naar huur na transactie. Vul uw SOL -balans aan of verminder de hoeveelheid SOL die u verzendt.",
   "solana_sign_spl_token_transaction_rent_exception": "Transactie kan niet worden voltooid. Onvoldoende Sol vertrok naar huur na transactie. Vul uw SOL -balans op.",
