--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -895,6 +895,7 @@
   "single_seed_wallets_group": "Portfele z pojedynczym seedem",
   "slidable": "Przesuwalne",
   "solana_create_associated_token_account_exception": "Błąd tworzenia powiązanego konta tokena dla adresu odbiorcy.",
+  "solana_invalid_data_message": "Błąd podczas analizowania powiązanego konta tokenu dla tokena. Prosimy o potwierdzenie adresu odbioru i spróbuj ponownie.",
   "solana_no_associated_token_account_exception": "Nie ma powiązanego konta tokenowego dla tego adresu.",
   "solana_sign_native_transaction_rent_exception": "Transakcja nie może zostać zakończona. Po transakcji brakuje SOL na opłatę czynszu. Uprzejmie uzupełnij saldo SOL lub zmniejsz ilość wysyłanego SOL.",
   "solana_sign_spl_token_transaction_rent_exception": "Transakcja nie może zostać zakończona. Po transakcji brakuje SOL na opłatę za wynajem. Proszę uzupełnić saldo SOL.",
