--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -897,6 +897,7 @@
   "single_seed_wallets_group": "Carteiras de sementes únicas",
   "slidable": "Deslizável",
   "solana_create_associated_token_account_exception": "Erro a criação de um token associado Conta do endereço de recebimento.",
+  "solana_invalid_data_message": "Erro ao analisar a conta de token associada para token. Por favor, confirme o endereço de recebimento e tente novamente.",
   "solana_no_associated_token_account_exception": "Não existe uma conta de token associada para este endereço.",
   "solana_sign_native_transaction_rent_exception": "A transação não pode ser concluída. Sol insuficiente deixou para alugar após a transação. Por favor, complete seu saldo sol ou reduza a quantidade de sol que você está enviando.",
   "solana_sign_spl_token_transaction_rent_exception": "A transação não pode ser concluída. Sol insuficiente deixou para alugar após a transação. Por favor, complete seu equilíbrio sol.",
