--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -896,6 +896,7 @@
   "single_seed_wallets_group": "Одиночные кошельки",
   "slidable": "Скользящий",
   "solana_create_associated_token_account_exception": "Ошибка создания ассоциированной учетной записи для адреса для адреса.",
+  "solana_invalid_data_message": "Ошибка анализа связанной учетной записи токена. Пожалуйста, подтвердите адрес получения и повторите попытку.",
   "solana_no_associated_token_account_exception": "Для этого адреса нет связанной учетной записи токена.",
   "solana_sign_native_transaction_rent_exception": "Сделка не может быть завершена. Недостаточный соль ушел в аренду после транзакции. Пожалуйста, поместите свой баланс Sol или уменьшите количество Sol, которое вы отправляете.",
   "solana_sign_spl_token_transaction_rent_exception": "Сделка не может быть завершена. Недостаточный соль ушел в аренду после транзакции. Пожалуйста, пополните свой баланс Sol.",
