--- a/res/values/strings_tl.arb
+++ b/res/values/strings_tl.arb
@@ -895,6 +895,7 @@
   "single_seed_wallets_group": "Solong mga pitaka ng binhi",
   "slidable": "Slidable",
   "solana_create_associated_token_account_exception": "Error sa paglikha ng nauugnay na token account para sa resibo address.",
+  "solana_invalid_data_message": "Error sa pag -parse na nauugnay sa token account para sa token. Mabuting kumpirmahin ang makatanggap ng address at subukang muli.",
   "solana_no_associated_token_account_exception": "Walang nauugnay na token account para sa address na ito.",
   "solana_sign_native_transaction_rent_exception": "Hindi makumpleto ang transaksyon. Hindi sapat na SOL na naiwan para sa upa pagkatapos ng transaksyon. Mabuting itaas ang iyong balanse sa sol o bawasan ang dami ng sol na iyong ipinapadala.",
   "solana_sign_spl_token_transaction_rent_exception": "Hindi makumpleto ang transaksyon. Hindi sapat na SOL na naiwan para sa upa pagkatapos ng transaksyon. Mabuting itaas ang iyong balanse sa sol.",
