--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -896,6 +896,7 @@
   "single_seed_wallets_group": "Поодинокі насінні гаманці",
   "slidable": "Розсувний",
   "solana_create_associated_token_account_exception": "Помилка створення пов’язаного облікового запису Token для адреси приймання.",
+  "solana_invalid_data_message": "Помилка аналізу пов’язаного облікового запису маркера для маркера. Будь ласка, підтвердьте адресу отримання та повторіть спробу.",
   "solana_no_associated_token_account_exception": "Для цієї адреси немає пов’язаного облікового запису маркера.",
   "solana_sign_native_transaction_rent_exception": "Транзакція не може бути завершена. Недостатня SOL залишила оренду після транзакції. Будь ласка, поповніть свій баланс SOL або зменшіть кількість SOL, який ви надсилаєте.",
   "solana_sign_spl_token_transaction_rent_exception": "Транзакція не може бути завершена. Недостатня SOL залишила оренду після транзакції. Будь ласка, наповніть свій баланс SOL.",
