--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -897,6 +897,7 @@
   "single_seed_wallets_group": "سنگل بیج کے بٹوے",
   "slidable": "سلائیڈ ایبل",
   "solana_create_associated_token_account_exception": "وصول کنندہ ایڈریس کے لئے وابستہ ٹوکن اکاؤنٹ بنانے میں غلطی۔",
+  "solana_invalid_data_message": "ٹوکن سے وابستہ ٹوکن سے وابستہ غلطی کی تجزیہ۔ برائے مہربانی تصدیق کریں ایڈریس وصول کریں اور دوبارہ کوشش کریں۔",
   "solana_no_associated_token_account_exception": "اس پتے کے لئے کوئی وابستہ ٹوکن اکاؤنٹ نہیں ہے۔",
   "solana_sign_native_transaction_rent_exception": "لین دین مکمل نہیں کیا جاسکتا۔ ٹرانزیکشن کے بعد کرایہ کے لئے ناکافی SOL چھوڑ دیا گیا ہے۔ برائے مہربانی اپنے سول توازن کو اوپر کریں یا آپ بھیج رہے ہیں اس کی مقدار کو کم کریں۔",
   "solana_sign_spl_token_transaction_rent_exception": "لین دین مکمل نہیں کیا جاسکتا۔ ٹرانزیکشن کے بعد کرایہ کے لئے ناکافی SOL چھوڑ دیا گیا ہے۔ برائے مہربانی اپنے سول توازن کو اوپر رکھیں۔",
