--- a/res/values/strings_vi.arb
+++ b/res/values/strings_vi.arb
@@ -892,6 +892,7 @@
   "single_seed_wallets_group": "Ví hạt đơn",
   "slidable": "Có thể kéo",
   "solana_create_associated_token_account_exception": "Lỗi Tạo tài khoản mã thông báo liên quan cho địa chỉ biên lai.",
+  "solana_invalid_data_message": "Lỗi phân tích cú pháp tài khoản mã thông báo được liên kết cho mã thông báo. Vui lòng xác nhận địa chỉ nhận và thử lại.",
   "solana_no_associated_token_account_exception": "Không có tài khoản mã thông báo liên quan cho địa chỉ này.",
   "solana_sign_native_transaction_rent_exception": "Giao dịch không thể được hoàn thành. Không đủ Sol còn lại cho thuê sau khi giao dịch. Vui lòng tăng số dư Sol của bạn hoặc giảm số lượng sol bạn đang gửi.",
   "solana_sign_spl_token_transaction_rent_exception": "Giao dịch không thể được hoàn thành. Không đủ Sol còn lại cho thuê sau khi giao dịch. Vui lòng lên cân bằng sol của bạn.",
