--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -60,7 +60,7 @@
   "approve": "Aprobar",
   "approve_request": "Aprobar la solicitud",
   "approve_tokens": "Aprobar tokens",
-  "apps": "Aplicaciones",
+  "apps": "Apps",
   "arbiscan_history": "Historia de ArbiScan",
   "arrive_in_this_address": "${currency} ${tag}llegará a esta dirección",
   "ascending": "Ascendente",
@@ -439,8 +439,8 @@
   "hide": "Ocultar",
   "hide_details": "Ocultar detalles",
   "high_contrast_theme": "Tema De Alto Contraste",
-  "history": "Historia",
-  "home": "Hogar",
+  "history": "Historial",
+  "home": "Inicio",
   "home_screen_settings": "Configuración de Pantalla de Inicio",
   "how_to_connect": "Cómo conectar",
   "how_to_use": "Cómo usar",
