CW-1208: Pay Anything EVM enahancements (#2600)
* feat: Pay Anything EVM enahancements

* ifx: Add baseEth to address validator switch case

* fix: Error detecting other wallet types

* feat: Preserve QR amount and other data through evm chain selection flow

* Update container color to surfaceContainer

* feat: Add support for Bitcoin Lightning Network detection

- Identify Base QR codes when scanned
- Display all available currencies for network
- Enhance detector to recognize lightning addresses

* fix: Update token selection for currently selected wallet

* fix: Improve token matching logic for EVM networks

* feat: Update selected currency when wallet is switched

* ui: Add chain badge to the swap confirmation bottomsheet

* fix: Asks to switch wallets even if the current wallet type is the same as the QR. Fix merge conflicts too

* fix: Handle matching logic internally and general cleanups

* fix: Terminate flow if address is not a valid parsed address

---------

Co-authored-by: Omar Hatem <omarh.ismail1@gmail.com>
Co-authored-by: tuxsudo <tuxsudo@tux.pizza>

--- a/res/values/strings_ar.arb
+++ b/res/values/strings_ar.arb
@@ -365,9 +365,11 @@
   "estimated_new_fee": "رسوم جديدة مقدرة",
   "estimated_receive_amount": "مقدرة المبلغ الاستقبال",
   "eta": "إيتا",
+  "ethereum_ecosystem": "النظام البيئي للإيثريوم",
   "etherscan_history": "Etherscan تاريخ",
   "event": "ﺙﺪﺣ",
   "events": "ﺙﺍﺪﺣﻷ﻿ﺍ",
+  "evm_ecosystem_description": "إذا لزم الأمر، قم بتعديل الشبكة والرمز المميز الذي ترغب في استخدامه لهذه الدفعة.",
   "exchange": "تبادل",
   "exchange_extra_info": "يرجى عدم نسيان تحديد المذكرة أو معرف إضافي أثناء إرسال هذه المعاملة للتبادل",
   "exchange_incorrect_current_wallet_for_xmr": "إذا كنت ترغب في تبديل XMR من رصيد محفظة الكعكة ، فيرجى التبديل إلى محفظة Monero أولاً.",
@@ -792,7 +794,9 @@
   "select_destination": ".ﻲﻃﺎﻴﺘﺣﻻ﻿ﺍ ﺦﺴﻨﻟﺍ ﻒﻠﻣ ﺔﻬﺟﻭ ﺪﻳﺪﺤﺗ ءﺎﺟﺮﻟﺍ",
   "select_hw_account_below": "الرجاء تحديد حساب الاستعادة أدناه:",
   "select_manufacturer_title": "حدد الشركة المصنعة",
+  "select_network": "حدد الشبكة",
   "select_sell_provider_notice": ".ﻖﻴﺒﻄﺘﻟﺍ ﺕﺍﺩﺍﺪﻋﺇ ﻲﻓ ﻚﺑ ﺹﺎﺨﻟﺍ ﻲﺿﺍﺮﺘﻓﻻ﻿ﺍ ﻊﻴﺒﻟﺍ ﺩﻭﺰﻣ ﻦﻴﻴﻌﺗ ﻖﻳﺮﻃ ﻦﻋ ﺔﺷﺎﺸﻟﺍ ﻩﺬﻫ ﻲﻄﺨﺗ",
+  "select_token": "حدد الرمز المميز",
   "select_your_country": "الرجاء تحديد بلدك",
   "selected_trocador_provider": "مزود تروكادور المختار",
   "sell": "بيع",
