--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -366,8 +366,10 @@
   "estimated_receive_amount": "Cantidad estimada a recibir",
   "eta": "ETA",
   "etherscan_history": "Historial de Etherscan",
+  "ethereum_ecosystem": "Ecosistema Etereum",
   "event": "Evento",
   "events": "Eventos",
+  "evm_ecosystem_description": "Si es necesario, modifica la red y el token que deseas utilizar para este pago.",
   "exchange": "Intercambio",
   "exchange_extra_info": "Por favor, no olvide especificar el Memo o el Extra ID al enviar esta transacción al exchange.",
   "exchange_incorrect_current_wallet_for_xmr": "Si deseas intercambiar XMR de tu saldo de Monero en Cake Wallet, por favor cambia primero a tu billetera Monero.",
@@ -793,7 +795,9 @@
   "select_destination": "Selecciona la ubicación del archivo de copia de seguridad.",
   "select_hw_account_below": "Selecciona la cuenta que deseas restaurar a continuación:",
   "select_manufacturer_title": "Seleccionar Fabricante",
+  "select_network": "Seleccionar red",
   "select_sell_provider_notice": "Selecciona un proveedor de venta arriba. Puedes omitir esta pantalla configurando tu proveedor de venta predeterminado en la configuración de la aplicación.",
+  "select_token": "Seleccionar ficha",
   "select_your_country": "Por favor, selecciona tu país",
   "selected_trocador_provider": "proveedor de Trocador seleccionado",
   "sell": "Vender",
