--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -365,9 +365,11 @@
   "estimated_new_fee": "अनुमानित नया शुल्क",
   "estimated_receive_amount": "अनुमानित राशि",
   "eta": "ईटा",
+  "ethereum_ecosystem": "एथेरियम पारिस्थितिकी तंत्र",
   "etherscan_history": "इथरस्कैन इतिहास",
   "event": "आयोजन",
   "events": "आयोजन",
+  "evm_ecosystem_description": "यदि आवश्यक हो, तो उस नेटवर्क और टोकन को संशोधित करें जिसका उपयोग आप इस भुगतान के लिए करना चाहते हैं।",
   "exchange": "अदला-बदली",
   "exchange_extra_info": "कृपया एक्सचेंज के लिए इस लेनदेन को भेजते समय मेमो या अतिरिक्त आईडी निर्दिष्ट करना न भूलें",
   "exchange_incorrect_current_wallet_for_xmr": "यदि आप अपने केक वॉलेट मोनेरो बैलेंस से XMR को स्वैप करना चाहते हैं, तो कृपया पहले अपने मोनेरो वॉलेट पर स्विच करें।",
@@ -794,7 +796,9 @@
   "select_destination": "कृपया बैकअप फ़ाइल के लिए गंतव्य का चयन करें।",
   "select_hw_account_below": "कृपया नीचे पुनर्स्थापित करने के लिए कौन सा खाता चुनें:",
   "select_manufacturer_title": "निर्माता का चयन करें",
+  "select_network": "नेटवर्क चुनें",
   "select_sell_provider_notice": "ऊपर एक विक्रय प्रदाता का चयन करें। आप ऐप सेटिंग में अपना डिफ़ॉल्ट विक्रय प्रदाता सेट करके इस स्क्रीन को छोड़ सकते हैं।",
+  "select_token": "टोकन चुनें",
   "select_your_country": "कृपया अपने देश का चयन करें",
   "selected_trocador_provider": "चयनित ट्रोकैडर प्रदाता",
   "sell": "बेचना",
