--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -365,9 +365,11 @@
   "estimated_new_fee": "Perkiraan biaya baru",
   "estimated_receive_amount": "Diperkirakan jumlah menerima",
   "eta": "Eta",
+  "ethereum_ecosystem": "Ekosistem Ethereum",
   "etherscan_history": "Sejarah Etherscan",
   "event": "Peristiwa",
   "events": "Acara",
+  "evm_ecosystem_description": "Jika perlu, ubah jaringan dan token yang ingin Anda gunakan untuk pembayaran ini.",
   "exchange": "Menukarkan",
   "exchange_extra_info": "Harap jangan lupa untuk menentukan memo atau ID tambahan saat mengirim transaksi ini untuk pertukaran",
   "exchange_incorrect_current_wallet_for_xmr": "Jika Anda ingin bertukar XMR dari Saldo Monero Dompet Kue Anda, silakan beralih ke Monero Wallet Anda terlebih dahulu.",
@@ -795,7 +797,9 @@
   "select_destination": "Silakan pilih tujuan untuk file cadangan.",
   "select_hw_account_below": "Pilih akun mana yang akan dikembalikan di bawah ini:",
   "select_manufacturer_title": "Pilih produsen",
+  "select_network": "Pilih Jaringan",
   "select_sell_provider_notice": "Pilih penyedia jual di atas. Anda dapat melewati layar ini dengan mengatur penyedia penjualan default Anda di pengaturan aplikasi.",
+  "select_token": "Pilih Token",
   "select_your_country": "Pilih negara Anda",
   "selected_trocador_provider": "Penyedia Trocador Terpilih",
   "sell": "Jual",
