--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -365,9 +365,11 @@
   "estimated_new_fee": "ခန့်မှန်းသစ်ခန့်မှန်း",
   "estimated_receive_amount": "ခန့်မှန်းရရှိသောပမာဏ",
   "eta": "eta",
+  "ethereum_ecosystem": "Etheumeum ဂေဟစနစ်",
   "etherscan_history": "Etherscan သမိုင်း",
   "event": "ပွဲ",
   "events": "အဲ့ဒါနဲ့",
+  "evm_ecosystem_description": "လိုအပ်ပါကဤငွေပေးချေမှုအတွက်သင်အသုံးပြုလိုသည့်ကွန်ယက်နှင့်တိုကင်ကိုပြင်ဆင်ပါ။",
   "exchange": "လဲလှယ်",
   "exchange_extra_info": "ငွေလဲလှယ်မှုအတွက်ဤငွေပေးငွေယူကိုပေးပို့စဉ်မှတ်စုတိုသို့မဟုတ်အပို ID ကိုသတ်မှတ်ရန်မမေ့ပါနှင့်",
   "exchange_incorrect_current_wallet_for_xmr": "အကယ်. သင်သည် XMR ကိုသင်၏ကိတ်မုန့် Monero Balance မှ Swap ကိုလဲလှယ်လိုပါကသင်၏ Monero Wallet ကိုပထမဆုံးအကြိမ်ပြောင်းပါ။",
@@ -792,7 +794,9 @@
   "select_destination": "အရန်ဖိုင်အတွက် ဦးတည်ရာကို ရွေးပါ။",
   "select_hw_account_below": "အောက်ဖော်ပြပါမည်သည့်အကောင့်ကိုရွေးပါ။",
   "select_manufacturer_title": "ထုတ်လုပ်သူကိုရွေးချယ်ပါ",
+  "select_network": "ကွန်ယက်ကိုရွေးချယ်ပါ",
   "select_sell_provider_notice": "အထက်ဖော်ပြပါ အရောင်းဝန်ဆောင်မှုပေးသူကို ရွေးပါ။ အက်ပ်ဆက်တင်များတွင် သင်၏မူလရောင်းချပေးသူကို သတ်မှတ်ခြင်းဖြင့် ဤစခရင်ကို ကျော်နိုင်သည်။",
+  "select_token": "Token ကိုရွေးချယ်ပါ",
   "select_your_country": "ကျေးဇူးပြု. သင့်နိုင်ငံကိုရွေးချယ်ပါ",
   "selected_trocador_provider": "ရွေးချယ်ထား Tracador ပံ့ပိုးပေး",
   "sell": "ရောင်း",
