--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -366,6 +366,7 @@
   "estimated_receive_amount": "Szacowana kwota otrzymania",
   "eta": "ETA",
   "etherscan_history": "Historia Etherscan",
+  "ethereum_ecosystem": "Ekosystem Ethereum",
   "event": "Zdarzenie",
   "events": "Zdarzenia",
   "exchange": "Wymiana",
@@ -792,7 +793,9 @@
   "select_destination": "Wybierz miejsce docelowe dla pliku kopii zapasowej.",
   "select_hw_account_below": "Wybierz konto, które chcesz przywrócić poniżej:",
   "select_manufacturer_title": "Wybierz producenta",
+  "select_network": "Wybierz opcję Sieć",
   "select_sell_provider_notice": "Wybierz dostawcę sprzedaży powyżej. Możesz pominąć ten ekran, ustawiając domyślnego dostawcę sprzedaży w ustawieniach aplikacji.",
+  "select_token": "Wybierz Token",
   "select_your_country": "Wybierz swój kraj",
   "selected_trocador_provider": "wybrany dostawca Trocador",
   "sell": "Sprzedaj",
