--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -365,9 +365,11 @@
   "estimated_new_fee": "Nova taxa estimada",
   "estimated_receive_amount": "Valor estimado de recebimento",
   "eta": "ETA",
+  "ethereum_ecosystem": "Ecossistema Ethereum",
   "etherscan_history": "história Etherscan",
   "event": "Evento",
   "events": "Eventos",
+  "evm_ecosystem_description": "Se necessário, modifique a rede e o token que você gostaria de usar para este pagamento.",
   "exchange": "Intercâmbio",
   "exchange_extra_info": "Por favor, não se esqueça de especificar o memorando ou o ID extra ao enviar esta transação para a troca",
   "exchange_incorrect_current_wallet_for_xmr": "Se você deseja trocar o XMR do balanço da Cake Wallet, mude para a sua carteira Monero primeiro.",
@@ -794,7 +796,9 @@
   "select_destination": "Selecione o destino para o arquivo de backup.",
   "select_hw_account_below": "Selecione qual conta para restaurar abaixo:",
   "select_manufacturer_title": "Selecione o fabricante",
+  "select_network": "Selecione Rede",
   "select_sell_provider_notice": "Selecione um fornecedor de venda acima. Você pode pular esta tela definindo seu provedor de venda padrão nas configurações do aplicativo.",
+  "select_token": "Selecione o token",
   "select_your_country": "Selecione seu país",
   "selected_trocador_provider": "Provedor de Trocador selecionado",
   "sell": "Vender",
