--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -365,9 +365,11 @@
   "estimated_new_fee": "Расчетная новая плата",
   "estimated_receive_amount": "Расчетная сумма получения",
   "eta": "ETA",
+  "ethereum_ecosystem": "Экосистема Эфириума",
   "etherscan_history": "История Эфириума",
   "event": "Событие",
   "events": "События",
+  "evm_ecosystem_description": "При необходимости измените сеть и токен, который вы хотите использовать для этого платежа.",
   "exchange": "Обмен",
   "exchange_extra_info": "Пожалуйста, не забудьте указать меморандум или дополнительный идентификатор при отправке этой транзакции для обмена",
   "exchange_incorrect_current_wallet_for_xmr": "Если вы хотите поменять XMR с баланса с кошельком для торта Monero, сначала переключитесь на свой кошелек Monero.",
@@ -793,7 +795,9 @@
   "select_destination": "Пожалуйста, выберите место для файла резервной копии.",
   "select_hw_account_below": "Пожалуйста, выберите, какую учетную запись восстановить ниже:",
   "select_manufacturer_title": "Выберите производителя",
+  "select_network": "Выберите сеть",
   "select_sell_provider_notice": "Выберите поставщика услуг продажи выше. Вы можете пропустить этот экран, установив поставщика услуг продаж по умолчанию в настройках приложения.",
+  "select_token": "Выберите токен",
   "select_your_country": "Пожалуйста, выберите свою страну",
   "selected_trocador_provider": "Выбранный провайдер Трокадора",
   "sell": "Продавать",
