--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -365,9 +365,11 @@
   "estimated_new_fee": "ค่าธรรมเนียมใหม่โดยประมาณ",
   "estimated_receive_amount": "โดยประมาณว่าจำนวนเงินที่ได้รับ",
   "eta": "กทพ.",
+  "ethereum_ecosystem": "ระบบนิเวศอีเธอเรียม",
   "etherscan_history": "ประวัติอีเธอร์สแกน",
   "event": "เหตุการณ์",
   "events": "กิจกรรม",
+  "evm_ecosystem_description": "หากจำเป็น ให้แก้ไขเครือข่ายและโทเค็นที่คุณต้องการใช้สำหรับการชำระเงินนี้",
   "exchange": "แลกเปลี่ยน",
   "exchange_extra_info": "โปรดอย่าลืมระบุบันทึกหรือรหัสพิเศษในขณะที่ส่งธุรกรรมนี้สำหรับการแลกเปลี่ยน",
   "exchange_incorrect_current_wallet_for_xmr": "หากคุณต้องการสลับ XMR จาก Cake Wallet Monero Balance โปรดเปลี่ยนไปใช้กระเป๋าเงิน Monero ก่อน",
@@ -792,7 +794,9 @@
   "select_destination": "โปรดเลือกปลายทางสำหรับไฟล์สำรอง",
   "select_hw_account_below": "กรุณาเลือกบัญชีที่จะกู้คืนด้านล่าง:",
   "select_manufacturer_title": "เลือกผู้ผลิต",
+  "select_network": "เลือกเครือข่าย",
   "select_sell_provider_notice": "เลือกผู้ให้บริการการขายด้านบน คุณสามารถข้ามหน้าจอนี้ได้โดยการตั้งค่าผู้ให้บริการการขายเริ่มต้นในการตั้งค่าแอป",
+  "select_token": "เลือกโทเค็น",
   "select_your_country": "กรุณาเลือกประเทศของคุณ",
   "selected_trocador_provider": "ผู้ให้บริการ Trocador ที่เลือก",
   "sell": "ขาย",
