--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -366,9 +366,11 @@
   "estimated_new_fee": "Ifoju tuntun owo tuntun",
   "estimated_receive_amount": "Ifoju gba iye",
   "eta": "Eta",
+  "ethereum_ecosystem": "Etheum Ecosystem",
   "etherscan_history": "Etherscan itan",
   "event": "Iṣẹlẹ",
   "events": "Awọn iṣẹlẹ",
+  "evm_ecosystem_description": "Ti o ba jẹ dandan, yi nẹtiwọki pada ati ami iwọ yoo fẹ lati lo fun isanwo yii.",
   "exchange": "Paarọ",
   "exchange_extra_info": "Jọwọ maṣe gbagbe lati tokasi akọsilẹ tabi id afikun lakoko ti o nfi iṣowo yii fun paṣipaarọ naa",
   "exchange_incorrect_current_wallet_for_xmr": "Ti o ba fẹ lati yi XMR lati dọgba oyinbo oyinbo kekere rẹ ti a fi omi ṣan rẹ, jọwọ yipada si apamọwọ Monrou akọkọ.",
@@ -793,7 +795,9 @@
   "select_destination": "Jọwọ yan ibi ti o nlo fun faili afẹyinti.",
   "select_hw_account_below": "Jọwọ yan iru iroyin lati mu pada ni isalẹ:",
   "select_manufacturer_title": "Yan olupese",
+  "select_network": "Yan Nẹtiwọọki",
   "select_sell_provider_notice": "Yan olupese ti o ta loke. O le foju iboju yii nipa tito olupese iṣẹ tita aiyipada rẹ ni awọn eto app.",
+  "select_token": "Yan Token",
   "select_your_country": "Jọwọ yan orilẹ-ede rẹ",
   "selected_trocador_provider": "olupese trocador ti a yan",
   "sell": "Tà",
