--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -365,9 +365,11 @@
   "estimated_new_fee": "估计新费用",
   "estimated_receive_amount": "估计接收金额",
   "eta": "ETA",
+  "ethereum_ecosystem": "以太坊生态系统",
   "etherscan_history": "以太扫描历史",
   "event": "事件",
   "events": "活动",
+  "evm_ecosystem_description": "如有必要，请修改您要用于此付款的网络和令牌。",
   "exchange": "交换",
   "exchange_extra_info": "请不要忘记在向交易所发送此交易时指定备忘录或额外的ID",
   "exchange_incorrect_current_wallet_for_xmr": "如果您想从蛋糕钱包Monero余额中交换XMR，请先切换到Monero Wallet。",
@@ -792,7 +794,9 @@
   "select_destination": "请选择备份文件的目的地。",
   "select_hw_account_below": "请在下面选择要还原的帐户：",
   "select_manufacturer_title": "选择制造商",
+  "select_network": "选择网络",
   "select_sell_provider_notice": "选择上面的销售提供商。您可以通过在应用程序设置中设置默认销售提供商来跳过此屏幕。",
+  "select_token": "选择代币",
   "select_your_country": "请选择你的国家",
   "selected_trocador_provider": "选定的trocador提供商",
   "sell": "卖",
