--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -365,9 +365,11 @@
   "estimated_new_fee": "Odhadovaný nový poplatek",
   "estimated_receive_amount": "Odhadovaná částka přijímání",
   "eta": "ETA",
+  "ethereum_ecosystem": "Ekosystém Ethereum",
   "etherscan_history": "Historie Etherscanu",
   "event": "událost",
   "events": "Události",
+  "evm_ecosystem_description": "V případě potřeby upravte síť a token, které chcete pro tuto platbu použít.",
   "exchange": "Výměna",
   "exchange_extra_info": "Při odesílání této transakce na burzu prosím nezapomeňte zadat poznámku nebo další ID",
   "exchange_incorrect_current_wallet_for_xmr": "Pokud chcete vyměnit XMR z vaší dortové peněženky Monero Balance, nejprve přepněte na peněženku Monero.",
@@ -792,7 +794,9 @@
   "select_destination": "Vyberte cíl pro záložní soubor.",
   "select_hw_account_below": "Níže vyberte, který účet chcete obnovit:",
   "select_manufacturer_title": "Vyberte výrobce",
+  "select_network": "Vyberte Síť",
   "select_sell_provider_notice": "Výše vyberte poskytovatele prodeje. Tuto obrazovku můžete přeskočit nastavením výchozího poskytovatele prodeje v nastavení aplikace.",
+  "select_token": "Vyberte Token",
   "select_your_country": "Vyberte prosím svou zemi",
   "selected_trocador_provider": "Vybraný poskytovatel Trocador",
   "sell": "Prodat",
