--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -365,9 +365,11 @@
   "estimated_new_fee": "Geschätzte neue Gebühr",
   "estimated_receive_amount": "Geschätzter Empfangsbetrag",
   "eta": "ETA",
+  "ethereum_ecosystem": "Ethereum-Ökosystem",
   "etherscan_history": "Etherscan-Historie",
   "event": "Ereignis",
   "events": "Veranstaltungen",
+  "evm_ecosystem_description": "Ändern Sie bei Bedarf das Netzwerk und den Token, den Sie für diese Zahlung verwenden möchten.",
   "exchange": "Tauschen",
   "exchange_extra_info": "Bitte vergessen Sie nicht, das Memo oder die zusätzliche ID anzugeben, während Sie diese Transaktion für den Austausch senden",
   "exchange_incorrect_current_wallet_for_xmr": "Wenn Sie XMR aus Ihrem Cake Wallet Monero-Saldo tauschen möchten, wechseln Sie zuerst zu Ihrer Monero-Wallet.",
@@ -793,7 +795,9 @@
   "select_destination": "Bitte wählen Sie das Ziel für die Sicherungsdatei aus.",
   "select_hw_account_below": "Bitte wählen Sie unten, welches Konto unten wiederhergestellt werden soll:",
   "select_manufacturer_title": "Hersteller auswählen",
+  "select_network": "Wählen Sie Netzwerk",
   "select_sell_provider_notice": "Wählen Sie oben einen Verkaufsanbieter aus. Sie können diesen Bildschirm überspringen, indem Sie in den App-Einstellungen Ihren Standard-Verkaufsanbieter festlegen.",
+  "select_token": "Wählen Sie Token aus",
   "select_your_country": "Bitte wählen Sie Ihr Land aus",
   "selected_trocador_provider": "Ausgewählter Trocador-Anbieter",
   "sell": "Verkaufen",
