--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -365,9 +365,11 @@
   "estimated_new_fee": "예상 새 수수료",
   "estimated_receive_amount": "예상 수령 금액",
   "eta": "에타",
+  "ethereum_ecosystem": "이더리움 생태계",
   "etherscan_history": "Etherscan 내역",
   "event": "이벤트",
   "events": "이벤트",
+  "evm_ecosystem_description": "필요한 경우 이 결제에 사용할 네트워크와 토큰을 수정하세요.",
   "exchange": "교환",
   "exchange_extra_info": "교환을 위해이 거래를 보내는 동안 메모 또는 추가 ID를 지정하는 것을 잊지 마십시오.",
   "exchange_incorrect_current_wallet_for_xmr": "Cake Wallet 모네로 잔액에서 XMR을 스왑하려면 먼저 모네로 지갑으로 전환하세요.",
@@ -793,7 +795,9 @@
   "select_destination": "백업 파일의 대상을 선택하세요.",
   "select_hw_account_below": "아래에서 복구할 계정을 선택하세요:",
   "select_manufacturer_title": "제조업체를 선택하십시오",
+  "select_network": "네트워크 선택",
   "select_sell_provider_notice": "위에서 판매 제공 업체를 선택하세요. 앱 설정에서 기본 판매 제공 업체를 설정하여 이 화면을 건너뛸 수 있습니다.",
+  "select_token": "토큰 선택",
   "select_your_country": "국가를 선택하세요",
   "selected_trocador_provider": "선택된 Trocador 제공 업체",
   "sell": "판매",
