Cw 1247 improve tabs navigation (#2634)
* add dashboard page indicator

* refactor dashboard page indicator and UI

* refactor fade animation

* smoother UI transitions

* Improve accessibility for page indicator

* localize action names

* Update page indicator colors and blur effect

* fix page indicator layout

* Update Spanish translations for 'apps', 'history', and 'home'

* update dashboard labels

* changed settings page label

* Modify page_indicator.dart

* refactor page indicator animation

* review fixes

---------

Co-authored-by: Jaim3 <github@jaim3.com>
Co-authored-by: tuxsudo <tuxsudo@tux.pizza>

--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -60,6 +60,7 @@
   "approve": "Approuver",
   "approve_request": "Approuver la demande",
   "approve_tokens": "Approuver les jetons",
+  "apps": "Applications",
   "arbiscan_history": "Historique d'ArbiScan",
   "arrive_in_this_address": "${currency} ${tag}arrivera à cette adresse",
   "ascending": "Ascendant",
@@ -440,6 +441,8 @@
   "hide": "Cacher",
   "hide_details": "Masquer les détails",
   "high_contrast_theme": "Thème à contraste élevé",
+  "history": "Histoire",
+  "home": "Maison",
   "home_screen_settings": "Paramètres de l'écran d'accueil",
   "how_to_connect": "Comment se connecter",
   "how_to_use": "Comment utiliser",
