--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -60,6 +60,7 @@
   "approve": "Amincewa",
   "approve_request": "Amince da bukata",
   "approve_tokens": "Amince da Alamu",
+  "apps": "Apps",
   "arbiscan_history": "Tarihin Arbiscan",
   "arrive_in_this_address": "${currency} ${tag} zai je wurin wannan adireshi",
   "ascending": "Hau",
@@ -440,6 +441,8 @@
   "hide": "Ɓoye",
   "hide_details": "Ɓoye cikakkun bayanai",
   "high_contrast_theme": "Babban Jigon Kwatance",
+  "history": "Tarihi",
+  "home": "Gida",
   "home_screen_settings": "Saitunan allo na gida",
   "how_to_connect": "Yadda ake haɗa",
   "how_to_use": "Yadda ake amfani da shi",
