--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -60,6 +60,7 @@
   "approve": "Odobriti",
   "approve_request": "Odobriti zahtjev",
   "approve_tokens": "Odobriti tokene",
+  "apps": "aplikacije",
   "arbiscan_history": "Arbiskanska povijest",
   "arrive_in_this_address": "${currency} ${tag}će stići na ovu adresu",
   "ascending": "Uzlazni",
@@ -440,6 +441,8 @@
   "hide": "Sakriti",
   "hide_details": "Sakrij pojedinosti",
   "high_contrast_theme": "Tema visokog kontrasta",
+  "history": "Povijest",
+  "home": "Dom",
   "home_screen_settings": "Postavke početnog zaslona",
   "how_to_connect": "Kako se povezati",
   "how_to_use": "Kako koristiti",
