--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -60,6 +60,7 @@
   "approve": "Հաստատել",
   "approve_request": "Հաստատում է հայցը",
   "approve_tokens": "Հաստատում է նշանները",
+  "apps": "Հավելվածներ",
   "arbiscan_history": "Արբիսկանի պատմություն",
   "arrive_in_this_address": "${currency} ${tag}կժամանի այս հասցեում",
   "ascending": "Աճող",
@@ -440,6 +441,8 @@
   "hide": "Թաքցնել",
   "hide_details": "Թաքցնել մանրամասները",
   "high_contrast_theme": "Բարձր հակադրության տեսք",
+  "history": "Պատմություն",
+  "home": "Տուն",
   "home_screen_settings": "Գլխավոր էկրանի կարգավորումներ",
   "how_to_connect": "Ինչպես միացնել",
   "how_to_use": "Ինչպես օգտագործել",
