--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -60,6 +60,7 @@
   "approve": "Approvare",
   "approve_request": "Approvare la richiesta",
   "approve_tokens": "Approvare i token",
+  "apps": "App",
   "arbiscan_history": "Storia dell'ArbiScan",
   "arrive_in_this_address": "${currency} ${tag}arriverà a questo indirizzo",
   "ascending": "Ascendente",
@@ -440,6 +441,8 @@
   "hide": "Nascondi",
   "hide_details": "Nascondi dettagli",
   "high_contrast_theme": "Tema ad alto contrasto",
+  "history": "Storia",
+  "home": "Casa",
   "home_screen_settings": "Impostazioni della schermata iniziale",
   "how_to_connect": "Come connettersi",
   "how_to_use": "Come usare",
