--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -60,6 +60,7 @@
   "approve": "승인",
   "approve_request": "요청 승인",
   "approve_tokens": "토큰을 승인합니다",
+  "apps": "앱",
   "arbiscan_history": "ArbiScan 역사",
   "arrive_in_this_address": "${currency} ${tag}이(가) 이 주소로 도착합니다",
   "ascending": "오름차순",
@@ -440,6 +441,8 @@
   "hide": "숨기기",
   "hide_details": "세부 정보 숨기기",
   "high_contrast_theme": "고대비 테마",
+  "history": "역사",
+  "home": "집",
   "home_screen_settings": "홈 화면 설정",
   "how_to_connect": "연결 방법",
   "how_to_use": "사용 방법",
