--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -60,6 +60,7 @@
   "approve": "လက်မခံပါ။",
   "approve_request": "တောင်းဆိုမှုကိုအတည်ပြု",
   "approve_tokens": "တိုကင်အတည်ပြု",
+  "apps": "အက်ပလီကေးများ",
   "arbiscan_history": "arbiscan သမိုင်း",
   "arrive_in_this_address": "${currency} ${tag}ဤလိပ်စာသို့ ရောက်ရှိပါမည်။",
   "ascending": "တက်",
@@ -440,6 +441,8 @@
   "hide": "သားရေ",
   "hide_details": "အသေးစိတ်ကို ဝှက်ပါ။",
   "high_contrast_theme": "အလင်းအမှောင် မြင့်မားသော အပြင်အဆင်",
+  "history": "သမိုင်း",
+  "home": "နေအိမ်",
   "home_screen_settings": "ပင်မစခရင် ဆက်တင်များ",
   "how_to_connect": "ဘယ်လိုချိတ်ဆက်ရမလဲ",
   "how_to_use": "အသုံးပြုနည်း",
