--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -60,6 +60,7 @@
   "approve": "Aprovar",
   "approve_request": "Aprovar solicitação",
   "approve_tokens": "Aprovar tokens",
+  "apps": "Aplicativos",
   "arbiscan_history": "História do ArbiScan",
   "arrive_in_this_address": "${currency} ${tag}chegará neste endereço",
   "ascending": "Ascendente",
@@ -440,6 +441,8 @@
   "hide": "Esconder",
   "hide_details": "Ocultar detalhes",
   "high_contrast_theme": "Tema de alto contraste",
+  "history": "História",
+  "home": "Lar",
   "home_screen_settings": "Configurações da tela inicial",
   "how_to_connect": "Como conectar",
   "how_to_use": "Como usar",
