--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -60,6 +60,7 @@
   "approve": "Fi ọwọ si",
   "approve_request": "IKILỌ RẸ",
   "approve_tokens": "Ṣe fọwọsi awọn àmi",
+  "apps": "Lw",
   "arbiscan_history": "Itan Arbiscan",
   "arrive_in_this_address": "${currency} ${tag} máa dé sí àdírẹ́sì yìí",
   "ascending": "Goke",
@@ -441,6 +442,8 @@
   "hide": "Pamọ",
   "hide_details": "Dé ìsọfúnni kékeré",
   "high_contrast_theme": "Akori Iyatọ giga",
+  "history": "Itan",
+  "home": "Ile",
   "home_screen_settings": "Awọn eto iboju ile",
   "how_to_connect": "Bi o ṣe le sopọ",
   "how_to_use": "Bawo ni lati lo",
