--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -60,6 +60,7 @@
   "approve": "Одобряване",
   "approve_request": "Одобрете искане",
   "approve_tokens": "Одобрете жетоните",
+  "apps": "Приложения",
   "arbiscan_history": "Арбисканска история",
   "arrive_in_this_address": "${currency} ${tag}ще отидат на този адрес",
   "ascending": "Възходящ",
@@ -440,6 +441,8 @@
   "hide": "Скрий",
   "hide_details": "Скриване на подробностите",
   "high_contrast_theme": "Тема с висок контраст",
+  "history": "История",
+  "home": "Начало",
   "home_screen_settings": "Настройки на началния екран",
   "how_to_connect": "Как да се свържа",
   "how_to_use": "Как да използвам",
