--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -60,6 +60,7 @@
   "approve": "Goedkeuren",
   "approve_request": "Het verzoek goedkeuren",
   "approve_tokens": "Tokens goedkeuren",
+  "apps": "Apps",
   "arbiscan_history": "ArbiScan-geschiedenis",
   "arrive_in_this_address": "${currency} ${tag}komt aan op dit adres",
   "ascending": "Stijgend",
@@ -440,6 +441,8 @@
   "hide": "Verbergen",
   "hide_details": "Details verbergen",
   "high_contrast_theme": "Thema met hoog contrast",
+  "history": "Geschiedenis",
+  "home": "Thuis",
   "home_screen_settings": "Instellingen voor het startscherm",
   "how_to_connect": "Hoe verbinding te maken",
   "how_to_use": "Hoe te gebruiken",
