--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -60,6 +60,7 @@
   "approve": "อนุมัติ",
   "approve_request": "อนุมัติคำขอ",
   "approve_tokens": "อนุมัติโทเค็น",
+  "apps": "แอพ",
   "arbiscan_history": "ประวัติ ArbiScan",
   "arrive_in_this_address": "${currency} ${tag}จะมาถึงที่อยู่นี้",
   "ascending": "จากน้อยไปมาก",
@@ -440,6 +441,8 @@
   "hide": "ซ่อน",
   "hide_details": "ซ่อนรายละเอียด",
   "high_contrast_theme": "ธีมความคมชัดสูง",
+  "history": "ประวัติศาสตร์",
+  "home": "บ้าน",
   "home_screen_settings": "การตั้งค่าหน้าจอหลัก",
   "how_to_connect": "วิธีการเชื่อมต่อ",
   "how_to_use": "วิธีใช้",
