--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -60,6 +60,7 @@
   "approve": "Onaylamak",
   "approve_request": "Talebi Onaylama",
   "approve_tokens": "Jetonları onaylayın",
+  "apps": "Uygulamalar",
   "arbiscan_history": "ArbiScan Geçmişi",
   "arrive_in_this_address": "${currency} ${tag}bu adrese ulaşacak",
   "ascending": "Yükselen",
@@ -440,6 +441,8 @@
   "hide": "Saklamak",
   "hide_details": "Detayları Gizle",
   "high_contrast_theme": "Yüksek Kontrastlı Tema",
+  "history": "Tarih",
+  "home": "Ev",
   "home_screen_settings": "Ana ekran ayarları",
   "how_to_connect": "Nasıl bağlanır",
   "how_to_use": "Nasıl kullanılır",
