--- a/res/values/strings_vi.arb
+++ b/res/values/strings_vi.arb
@@ -60,6 +60,7 @@
   "approve": "Phê duyệt",
   "approve_request": "Phê duyệt yêu cầu",
   "approve_tokens": "Phê duyệt mã thông báo",
+  "apps": "Ứng dụng",
   "arbiscan_history": "Lịch sử quét Arbi",
   "arrive_in_this_address": "${currency} ${tag} sẽ đến địa chỉ này",
   "ascending": "Tăng dần",
@@ -439,6 +440,8 @@
   "hide": "Trốn",
   "hide_details": "Ẩn chi tiết",
   "high_contrast_theme": "Chủ đề độ tương phản cao",
+  "history": "Lịch sử",
+  "home": "Trang chủ",
   "home_screen_settings": "Cài đặt màn hình chính",
   "how_to_connect": "Cách kết nối",
   "how_to_use": "Cách sử dụng",
