chore: update German localization strings for consistency and accuracy

--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -17,7 +17,7 @@
   "add_new_node": "Neuen Knoten hinzufügen",
   "add_new_word": "Neues Wort hinzufügen",
   "add_passphrase": "Fügen Sie Passphrase hinzu",
-  "add_passphrase_warning_text": "Geben Sie nur eine Passphrase ein, wenn Sie in der Vergangenheit eine für diese Wallet verwendet haben. Wenn Sie die falsche Passphrase eingeben oder in dieser Wallet noch keine Passphrase verwendet haben, werden Sie keine vorhandenen Gelder oder Geschichte sehen.",
+  "add_passphrase_warning_text": "Geben Sie nur eine Passphrase ein, wenn Sie in der Vergangenheit eine für diese Wallet verwendet haben. Wenn Sie die falsche Passphrase eingeben oder in dieser Wallet noch keine Passphrase verwendet haben, werden Sie keine vorhandenen Gelder oder Verlauf sehen.",
   "add_receiver": "Fügen Sie einen weiteren Empfänger hinzu (optional)",
   "add_secret_code": "Oder fügen Sie diesen Geheimcode einer Authentifizierungs-App hinzu",
   "add_tip": "Tipp hinzufügen",
@@ -61,7 +61,7 @@
   "approve_request": "Anfrage genehmigen",
   "approve_tokens": "Token genehmigen",
   "apps": "Apps",
-  "arbiscan_history": "ArbiScan-Geschichte",
+  "arbiscan_history": "ArbiScan-Verlauf",
   "arrive_in_this_address": "${currency} ${tag} wird an dieser Adresse ankommen",
   "ascending": "Aufsteigend",
   "ask_each_time": "Jedes Mal fragen",
@@ -441,8 +441,8 @@
   "hide": "Verstecken",
   "hide_details": "Details ausblenden",
   "high_contrast_theme": "Kontrastreiches Thema",
-  "history": "Geschichte",
-  "home": "Heim",
+  "history": "Verlauf",
+  "home": "Home",
   "home_screen_settings": "Einstellungen für den Startbildschirm",
   "how_to_connect": "Anleitung",
   "how_to_use": "Wie benutzt man",
@@ -577,7 +577,7 @@
   "offline": "offline",
   "ok": "OK",
   "old_fee": "Alte Gebühr",
-  "oled_mode": "OLED -Modus",
+  "oled_mode": "OLED-Modus",
   "onion_link": "Onion-Link",
   "online": "online",
   "onramper_option_description": "Kaufen Sie schnell Krypto mit vielen Zahlungsmethoden. In den meisten Ländern erhältlich. Spreads und Gebühren variieren.",
@@ -788,11 +788,11 @@
   "seed_share": "Seed teilen",
   "seed_title": "Seed",
   "seed_verified": "Seed verifiziert",
-  "seed_verified_subtext": "Sie können Ihre Wallet mit dem gespeicherten Seed wiederherstelle, selbst wenn sie ihr Gerät verloren haben.",
+  "seed_verified_subtext": "Sie können Ihre Wallet mit dem gespeicherten Seed wiederherstellen, selbst wenn sie ihr Gerät verloren haben.",
   "seedtype": "Seedtyp",
   "seedtype_alert_content": "Das Teilen von Seeds mit anderen Wallet ist nur mit bip39 Seedype möglich.",
   "seedtype_alert_title": "Seedype-Alarm",
-  "select_a_wallet": "Wählen Sie eine Brieftasche",
+  "select_a_wallet": "Wählen Sie eine Wallet",
   "select_backup_file": "Sicherungsdatei auswählen",
   "select_buy_provider_notice": "Wählen Sie oben einen Anbieter kaufen. Sie können diese Seite überspringen, indem Sie Ihren Standard-Kaufanbieter in den App-Einstellungen festlegen.",
   "select_destination": "Bitte wählen Sie das Ziel für die Sicherungsdatei aus.",
@@ -881,9 +881,9 @@
   "sign_message": "Nachricht unterschreiben",
   "sign_one": "Unterschreiben",
   "sign_up": "Anmelden",
-  "sign_verify_message": "Zeichen / überprüfen",
+  "sign_verify_message": "Unterschreiben / überprüfen",
   "sign_verify_message_sub": "Unterschreiben oder überprüfen Sie eine Nachricht mit Ihrem privaten Schlüssel",
-  "sign_verify_title": "Zeichen / überprüfen",
+  "sign_verify_title": "Unterschreiben / überprüfen",
   "signature": "Signatur",
   "signature_invalid_error": "Die Signatur gilt nicht für die angegebene Nachricht",
   "signTransaction": "Transaktion unterzeichnen",
@@ -929,7 +929,7 @@
   "swap": "Tauschen",
   "sweeping_wallet": "Wallet leeren",
   "sweeping_wallet_alert": "Das sollte nicht lange dauern. VERLASSEN SIE DIESEN BILDSCHIRM NICHT, ANDERNFALLS KÖNNEN DIE GELDER VERLOREN GEHEN",
-  "switch_wallet": "Brieftasche schalten",
+  "switch_wallet": "Wallet wechseln",
   "switchToETHWallet": "Bitte wechseln Sie zu einem Ethereum-Wallet und versuchen Sie es erneut",
   "switchToEVMCompatibleWallet": "Bitte wechseln Sie zu einem EVM-kompatiblen Wallet und versuchen Sie es erneut (Ethereum, Polygon)",
   "symbol": "Symbol",
